# biopython

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pyrightconfig.json
sequence/: __init__.py  seq_annotation_objects.py  seq_io.py  seq_objects.py  seq_plots.py  utils.py
