[project]
name = "biopython-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "matplotlib>=3.11.1",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pre-commit>=4.6.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
